--- a/src/app/add-magazine/add-magazine.component.html
+++ b/src/app/add-magazine/add-magazine.component.html
@@ -8,7 +8,7 @@
   <div class="right-slider"> 
   
     <div class="container mt-5 col-5">
-        <form [formGroup]="magazineForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data">
+        <form [formGroup]="magazineForm" #uploadForm (ngSubmit)="onSubmit()" enctype="multipart/form-data">
 
             <div class="input-group mb-3">
                 <span class="input-group-text">Title</span>
@@ -18,11 +18,6 @@
                 <span class="input-group-text">Author</span>
                 <input type="text" class="form-control" id="author" formControlName="author" placeholder="Enter Author Name">
               </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text">Content</span>
-                <textarea class="form-control" id="content" formControlName="content" rows="3"></textarea>
-              </div>
-              
               <select class="form-select mb-3"  formControlName="industry" id="industry" aria-label="Default select example">
                 <option selected>---Select Industry---</option>
                 <option value="Service">Service</option>
@@ -32,16 +27,18 @@
           
           
               <div class="input-group mb-3">
-                  <input type="file" class="form-control" id="inputGroupFile01" name="imageArticle" (change)="onFileSelected($event)">
+                  <span>Magazine:</span><input type="file" class="form-control" id="inputGroupFile01" name="magazinePDF" (change)="onFileSelected($event)">
               </div>
+              <div class="input-group mb-3">
+               <span>Cover Image:</span> <input type="file" class="form-control" id="inputGroupFile01" name="coverImage" (change)="onFileSelected($event)">
+            </div>
               <div class="d-grid gap-2 col-3" >
                 <button class="btn btn-primary"  type="submit">Submit</button>
               </div>
         </form>
-      <!-- <form [formGroup]="articleForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data"> -->
-        
-<!--         
-      </form> -->
+      <form [formGroup]="magazineForm" (ngSubmit)="onSubmit()" enctype="multipart/form-data"> 
+                 
+      </form> 
     </div>
     
   
