--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link btn"  [routerLink]="['/articles']">Articles</a>
         </li>
         <li class="nav-item" (click)="setActive('magazines')" [class.active]="activeTab === 'magazines'">
-          <a class="nav-link btn"  [routerLink]="['/articles']">Magazines</a>
+          <a class="nav-link btn"  [routerLink]="['/magazine']">Magazines</a>
         </li>
         <!-- <li class="nav-item" (click)="setActive('industry')" [class.active]="activeTab === 'industry'">
           <a class="nav-link btn"  [routerLink]="['/industry']">Industry</a>
