--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card" style="width: 22rem;" *ngFor="let a of articles">
+  <div class="card" style="width: 22rem;" *ngFor="let a of article">
     <div class="position-relative">
       <img src="{{a.imageArticle}}" style="height:15rem;" class="card-img-top" alt="{{a.title}}">
       <div class="card-img-overlay d-flex align-items-end justify-content-center">
