--- a/src/app/display-magazine/display-magazine.component.html
+++ b/src/app/display-magazine/display-magazine.component.html
@@ -14,6 +14,7 @@
           <!-- <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary center-align ">Read More</a> -->
           <!-- <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary center-align ">Read More</a> -->
           <button class="btn btn-primary center-align" target = "_blank" (click)="readMore(a._id)">Read More</button>
+<!-- src/app/display-magazine/display-magazine.component.html -->
           <button *ngIf="isAdminLoggedIn" class="btn btn-warning center-align" (click)="deleteMagazine(a._id)">Delete</button>
         </div>
       </div>
