--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -8,6 +8,7 @@
     align-items: center;
     margin-bottom: 2rem;
 }
-.justify{
-    text-align: justify;
+
+#quicklinks li:hover{
+    text-decoration: underline;
 }
