--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,15 +21,25 @@
     <a class="navbar-brand" href="https://in.linkedin.com/" target="_blank">
     <img src="assets/icons8-linkedin.svg" alt="Bootstrap" width="30" height="24">
   </a>   
-      </div>
-      <div class="col-md-3 justify"><h3>Quick Links</h3><div>
-        <a class="nav-link btn"  [routerLink]="['/articles']">Articles</a>
-        <a class="nav-link btn"  [routerLink]="['/articles']">Magazines</a>
-        <a class="nav-link btn"  [routerLink]="['/contactus']">Contact Us</a>
-        <a class="nav-link btn"  [routerLink]="['/aboutus']">About Us</a>
-        <a class="nav-link btn"  [routerLink]="['/login']">Login</a>
-      </div></div>
-      <div class="col-md-4">
+</div>
+<div class="col-md-3 " >
+  <h3>Quick Links</h3>
+  <ul id="quicklinks" style="text-align: left">
+    <li><a class="nav-link btn"  [routerLink]="['/articles']">Articles</a></li>
+    <li><a class="nav-link btn"  [routerLink]="['/articles']">Magazines</a></li>
+    <li><a class="nav-link btn"  [routerLink]="['/contactus']">Contact Us</a></li>
+    <li><a class="nav-link btn"  [routerLink]="['/aboutus']">About Us</a></li>
+    <li><a class="nav-link btn"  [routerLink]="['/login']">Login</a></li>
+  </ul>
+</div>
+
+
+
+
+
+
+
+     <div class="col-md-4">
         <h5><h3>Contact Us</h3></h5>
         <address>
           123 Main Street<br>
