--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,28 +1,7 @@
-<!-- <div class="container">
-  <div class="card widget-card" style="width: 22rem;" *ngFor="let a of article">
-    <div class="position-relative">
-      <img src="{{a.imageArticle}}" style="height:15rem;" class="card-img-top" alt="{{a.title}}">
-      <div class="card-img-overlay d-flex align-items-end justify-content-center">
-        <!-- <h5 class="card-title text-white">{{a.title | slice:0:20}}</h5> 
-      </div>
-    </div>
-    <div class="card-body" style="height: 15rem;">
-      <h5 class="card-title ">{{a.title }}</h5>
-      <p class="card-text">{{a.content | slice:0:50}}..</p>
-      <div> Posted On:{{a.createdAt | slice:0:10}} </div>
-      <div class="button-container">
-        <!-- <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary center-align ">Read More</a> -->
-        <!-- <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary center-align ">Read More</a> 
-        <button class="btn btn-primary center-align" target = "_blank" (click)="readMore(a._id)">Read More</button>
-        <button *ngIf="isAdminLoggedIn" class="btn btn-warning center-align" (click)="deleteArticle(a._id)">Delete</button>
-      </div>
-    </div>
-  </div>
-</div> -->
 <div class="container">
-  <div class="card widget-card" *ngFor="let a of article">
+  <div class="card widget-card" *ngFor="let a of articles | slice:(page - 1) * 6 : page * 6">
     <div class="position-relative">
-      <img src="{{a.imageArticle}}" class="card-img-top" alt="{{a.title}}">
+      <img [src]="a.imageArticle" class="card-img-top" [alt]="a.title">
       <div class="card-img-overlay d-flex align-items-end justify-content-center"></div>
     </div>
     <div class="card-body">
@@ -37,3 +16,5 @@
   </div>
 </div>
 
+<mat-paginator [length]="articles.length" [pageSize]="6" aria-label="Select page" (page)="page = $event.pageIndex + 1">
+</mat-paginator>
