--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,16 +1,4 @@
-<!-- <div class="container-fluid p-0 mb-5">
-  <div class="position-relative">
-     <div class="container-fluid p-0 position-relative"> -->
-<!-- Big background image -->
-<!-- <img src="assets/background.avif" class="img-fluid imz" alt="Big Image"style="width: 100%; height:10%;"/>
-    
-    Image overlay 
-    <div class="position-absolute top-0" style="margin-top: 5%; margin-left:55%; margin-right: 5%;" >
-       Small image on top 
-      <img src="assets/Mirrorworld.webp" class="img-fluid small-image" alt="Small Image">
-    </div>
-    <div class="overlay"></div>
-  </div></div>  -->
+  <div class="color">
   <div class="text-container">
     <img src="assets/bg.jpg" alt="Notebook" style="width:100%; height:32rem;">
     <div class="text-block">
@@ -23,10 +11,9 @@
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
       <div class="carousel-inner justify-content-center">
         <div class="carousel-item" *ngFor="let a of articles; let i = index" [class.active]="i === 0">
-          <img src="{{a.imageArticle}}" class="d-block img1 mx-auto" alt="{{a.title}}"> 
+          <img src="{{a.imageArticle}}" class="d-block img1 mx-auto " alt="{{a.title}}"> 
           <div class="carousel-caption d-none ">
             <h5>"{{a.title}}"</h5>
-            <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary">Read More</a>
           </div>
           <div class="carousel-caption d-none d-md-block">
             <h5>{{a.title}}</h5>
@@ -43,99 +30,50 @@
       </div>
     </div>
   </div>
-  <div class="imgcontainer">
-    <div class="content-and-slider">
-      <div class="left-content">
-        <h1 style="text-align: center;">Latest Articles</h1>
-        <div *ngIf="latestArticle">  
-            <p class="card-text">{{latestArticle?.content | slice:0:500}}..</p>
-        </div>
-    </div>
-    
-    <div class="right-slider">
-        <div class="widget-content px-0" *ngIf="latestArticle">
-            <div class="chart d-flex justify-content-center fixed-image-size">
-                <img src="{{latestArticle?.imageArticle}}" 
-                    alt="{{latestArticle?.title}}" 
-                    class="large-image" alt="Image 1">
-                <!-- <a href="{{latestArticle?.imageArticle}}" target="_blank" class="btn btn-primary">Read More</a> -->
-            </div>
-        </div>
-    </div>
-    
-      
-      
-        
-          <!-- <div id="carouselExampleAutoplaying" class="carousel slide mx-4" data-bs-ride="carousel">
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="assets/pexels-erik-mclean-7524997.jpg" class="d-block w-100 img1" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/pexels-erik-mclean-7524998.jpg"  class="d-block w-100 img1" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="assets/pexels-natasha-kendall-4093392.jpg"  class="d-block w-100 img1" alt="...">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-           
-         </div> -->
-         
-      </div>
-    <!-- <div class="imgContent"><img src="assets/background2.jpg"></div> -->
-     <!-- <h1 class="heading">DIGITAL BUSINESS REVIEW MAGAZINE</h1>  -->
-  </div>
-  <!-- <div class="container mb-5 mt-5">
-    <div class="row mb-10 justify-content-center">
-      <div class="content">
-        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
-        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
-        <h3 style="text-align: center;">Coming Soon.....</h3>
-      
-        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
-        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
-        <h3 style="text-align: center;">Coming Soon.....</h3>
-     
-        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
-        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
-        <h3 style="text-align: center;">Coming Soon.....</h3>
-      
-        <h1 style="text-align: center;"><b>Digital Business Review Magazine</b></h1>
-        <p style="text-align: center;">Welcome to Digital Business Review Magazine, your premier source for insightful analysis, in-depth interviews, and cutting-edge trends in the world of digital business.</p>
-        <h3 style="text-align: center;">Coming Soon.....</h3>
-      </div>
-    </div>
-  </div> -->
-  
 
+
+
+  <!-- <div class="imgcontainer"> -->
+ 
 <div>
 <div>
 </div>
 <br>
 </div>
+<div class="imgcontainer">
+  <div class="content-and-slider">
+    <div class="left-content">
+      <h1 style="text-align: center;">Latest Articles</h1><br>
+      <div *ngIf="latestArticle">  
+        <h5>"{{latestArticle?.title}}"</h5>
+        <p class="card-text">{{latestArticle?.content | slice:0:100}}..</p>
+      </div>
+    </div>   
+    <div class="right-slider justify-content-center">
+      <div class="widget-content px-0" *ngIf="latestArticle">
+        <div class="chart d-flex justify-content-center fixed-image-size">
+          <img src="{{latestArticle?.imageArticle}}" 
+               alt="{{latestArticle?.title}}"
+               class="zoom-image">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
-
-
+<div class="custom-container">
+  <div class="magazine-content">
+    <div class="text-center border-bottom border-3"><strong><h2>Magazines</h2></strong></div>
     
-
-      
-<div class="container1">
-  <div class="row justify-content-center">
-    <div class="col-md-6 col-lg-3 mt-4 mb-5" *ngFor="let a of articles">
-      <div class="widget-content px-0">
-        <div class="chart d-flex justify-content-center">
-          <div class="image-wrapper">
-            <img src="{{a.imageArticle}}" alt="{{a.title}}" class="img-fluid fixed-image-size">
-            <div class="read-more-wrapper">
-              <a href="{{a.pdfArticle}}" target="_blank" class="btn read-more-button">Read More</a>
+    <div class="row justify-content-center">
+      <div class="col-md-6 col-lg-3 mt-4 mb-5" *ngFor="let a of magazines">
+        <div class="widget-content px-0">
+          <div class="chart d-flex justify-content-center">
+            <div class="image-wrapper">
+              <img src="{{a.coverImage}}" alt="{{a.title}}" class="img-fluid fixed-image-size zoom-image">
+              <div class="read-more-wrapper">
+                <a href="{{a.pdfArticle}}" target="_blank" class="btn read-more-button">Read More</a>
+              </div>
             </div>
           </div>
         </div>
@@ -143,48 +81,23 @@
     </div>
   </div>
 </div>
-
-
-      <!-- <div class="cont">
-        <div class="left-image">
-           <img  src="assets/DBR.png" alt="Left Image">
-            <img  src="assets/sample.jpg" alt="Left Image">
-        </div>
-        <div class="right-images">
-            <div>
-                <img  src="assets/background.jpg" alt="Right Image Top">
-            </div>
-            <div>
-                <img  src="assets/sample.jpg" alt="Right Image Bottom">
-            </div>
-        </div>
-    </div> -->
-    
-      <!-- <div class="col-md-3 mt-4 mb-4">
-        <div class="widget-content px-0">
-          <div class="chart d-flex justify-content-center">
-            <div class="image-wrapper" style="background-color: #000;">
-              <img src="assets/pexels-erik-mclean-7524997.jpg" class="img-fluid h-100" alt="Image 2">
-            </div>
-          </div>
+<div class="imgcontainerMag">
+  <div class="content-and-sliderMag">
+    <div class="right-sliderMag justify-content-center">
+      <div class="widget-content px-0" *ngIf="latestArticle">
+        <div class="chart d-flex justify-content-center fixed-image-size">
+          <img src="{{latestMagazine?.coverImage}}" 
+               alt="{{latestMagazine?.title}}"
+               class="zoom-imageMag">
         </div>
       </div>
-      <div class="col-md-3 mt-4 mb-4">
-        <div class="widget-content px-0">
-          <div class="chart d-flex justify-content-center">
-            <div class="image-wrapper" style="background-color: #000;">
-              <img src="assets/pexels-erik-mclean-7524997.jpg" class="img-fluid h-100" alt="Image 3">
-            </div>
-          </div>
-        </div>
+    </div>
+    <div class="left-contentMag">
+      <h1 style="text-align: center;">Latest Magazines</h1><br>
+      <div *ngIf="latestArticle">  
+        <h5>"{{latestMagazine?.title}}"</h5>
+        <p class="card-text">{{latestMagazine?.content | slice:0:100}}..</p>
       </div>
-      <div class="col-md-3 mt-4 mb-4">
-        <div class="widget-content px-0">
-          <div class="chart d-flex justify-content-center">
-            <div class="image-wrapper" style="background-color: #000;">
-              <img src="assets/pexels-erik-mclean-7524997.jpg" class="img-fluid h-100" alt="Image 4">
-            </div>
-          </div>
-        </div>
-      </div> -->
-   
+    </div> 
+  </div>
+</div><br>
