--- a/src/app/display-magazine/display-magazine.component.html
+++ b/src/app/display-magazine/display-magazine.component.html
@@ -1,42 +1,34 @@
 <div class="container">
-  <div class="card widget-card"  *ngFor="let a of magazine">
+  <div class="card widget-card" *ngFor="let a of magazine | slice:(page - 1) * 3 : page * 3">
     <div class="position-relative">
-      <img src="{{a.coverImage}}"class="card-img-top" alt="{{a.title}}">
+      <img [src]="a.coverImage" class="card-img-top" [alt]="a.title">
       <div class="card-img-overlay d-flex align-items-end justify-content-center">
         <!-- <h5 class="card-title text-white">{{a.title | slice:0:20}}</h5> -->
       </div>
     </div>
     <div class="card-body" style="height: 15rem;">
-      <h5 class="card-title ">{{a.title }}</h5>
-      <!-- <p class="card-text">{{a.content }}..</p> -->
-      <div> Posted On:{{a.createdAt }} </div>
+      <h5 class="card-title">{{a.title}}</h5>
+      <!-- <p class="card-text">{{a.content}}..</p> -->
+      <div>Posted On: {{a.createdAt}}</div>
       <div class="button-container">
-        <!-- <a href="{{a.imageArticle}}" target="_blank" class="btn btn-primary center-align ">Read More</a> -->
-        <!-- <a href="{{a.magazinePDF}}" target="_blank" class="btn btn-primary center-align ">Read More</a> -->
         <button class="btn btn-primary center-align" (click)="readMore(a._id)">Read More</button>
-
-
-        <button *ngIf="isAdminLoggedIn" class="btn btn-warning center-align"
-          (click)="deleteMagazine(a._id)">Delete</button>
+        <button *ngIf="isAdminLoggedIn" class="btn btn-warning center-align" (click)="deleteMagazine(a._id)">Delete</button>
       </div>
     </div>
   </div>
+</div>
 
-</div>
-<div>
- 
-</div>
+<mat-paginator [length]="magazine.length" [pageSize]="3" aria-label="Select page" (page)="page = $event.pageIndex + 1"></mat-paginator>
 
 <ng-template #content let-c="close" let-d="dismiss">
-	<div class="modal-header">
-		<h4 class="modal-title" id="modal-basic-title">Preview Magazine : {{magazineID}}</h4>
-		<button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
-	</div>
-	<div class="modal-body">
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Preview Magazine : {{magazineID}}</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
+  </div>
+  <div class="modal-body">
     <ngx-extended-pdf-viewer [src]="pdfUrl"></ngx-extended-pdf-viewer>
-	</div>
-	<div class="modal-footer">
-		<button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
-	</div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+  </div>
 </ng-template>
-
