--- a/src/app/add-article/add-article.component.html
+++ b/src/app/add-article/add-article.component.html
@@ -34,7 +34,7 @@
           <input type="file" class="form-control" id="inputGroupFile01" name="imageArticle" (change)="onFileSelected($event)">
       </div>
       <div class="d-grid gap-2 col-3" >
-        <button class="btn btn-primary"  type="submit">Submit</button>
+        <button class="btn btn-primary"  type="submit">Submit1</button>
       </div>
       
     </form>
