--- a/src/app/display-magazine/display-magazine.component.html
+++ b/src/app/display-magazine/display-magazine.component.html
@@ -9,7 +9,7 @@
     <div class="card-body" style="height: 15rem;">
       <h5 class="card-title">{{a.title}}</h5>
       <!-- <p class="card-text">{{a.content}}..</p> -->
-      <div>Posted On: {{a.createdAt}}</div>
+      <div>Posted On: {{a.createdAt  | slice:0:10}}</div>
       <div class="button-container">
         <button class="btn btn-primary center-align" (click)="readMore(a._id)">Read More</button>
         <button *ngIf="isAdminLoggedIn" class="btn btn-warning center-align" (click)="deleteMagazine(a._id)">Delete</button>
@@ -22,13 +22,13 @@
 
 <ng-template #content let-c="close" let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title" id="modal-basic-title">Preview Magazine : {{magazineID}}</h4>
+    <h4 class="modal-title" id="modal-basic-title">Preview Magazine : {{title}}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="d('Cross click')"></button>
   </div>
   <div class="modal-body">
-    <ngx-extended-pdf-viewer [src]="pdfUrl"></ngx-extended-pdf-viewer>
+    <ngx-extended-pdf-viewer [enablePrint]="false" [showDownloadButton]="false" [src]="pdfUrl"></ngx-extended-pdf-viewer>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-outline-dark" (click)="c('Save click')">Save</button>
+    <button type="button" class="btn btn-warning" (click)="c('Save click')">Close</button>
   </div>
 </ng-template>
